<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OAMMBLO</string>
    <string name="app_description">OAMMBLO\n(Otra Aplicación Más de MicroBLOgging)</string>
    <string name="login_title">Ingresar a OAMMBLO</string>
    <string name="login_hint_username">USERNAME</string>
    <string name="login_hint_password">PASSWORD</string>
    <string name="login_login">LOGIN</string>
    <string name="dashboard_tweets">TWEETS</string>
    <string name="dashboard_lists">LISTS</string>
    <string name="dashboard_mentions">MENTIONS</string>
    <string name="dashboard_retweets">RETWEETS</string>
    <string name="login_authenticate">Authenticate with Twitter</string>
    <string name="login_authentication_error">Unable to authenticate with Twitter. Please try again later.</string>

</resources>