<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dashboard_tweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:text="@string/dashboard_tweets"
            android:drawableTop="@drawable/ic_tweets"
            android:onClick="tweetsOnClick" />

        <Button
            android:id="@+id/dashboard_lists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:text="@string/dashboard_lists"
            android:drawableTop="@drawable/ic_list" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:background="@color/app_blue">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/app_grey" />

        <Button
            android:id="@+id/dashboard_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:drawableTop="@drawable/ic_message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dashboard_mentions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:text="@string/dashboard_mentions"
            android:drawableTop="@drawable/ic_mentions" />

        <Button
            android:id="@+id/dashboard_retweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/DashboardButton"
            android:text="@string/dashboard_retweets"
            android:drawableTop="@drawable/ic_retweets" />

    </LinearLayout>

</LinearLayout>